Fix text alignement on Privacy Policy

--- a/themes/dublin/styles/custom.css
+++ b/themes/dublin/styles/custom.css
@@ -6,6 +6,6 @@
   margin-right: 0.75rem;
 }
 
-.blog-post-body p {
-  word-wrap: break-word;
+.privacy-policy-body p {
+  width: 100%;
 }
